# tg2email

./: .env.example  .gitignore  bridge_config.db  pyproject.toml
src/tg2email/: config.py  database.py  email_handler.py  main.py  telegram_handler.py
